# adventofcode

./: .gitignore  pytest.ini
2015/: 10_looksay.py  11_passwords.py  12_json.py  13_dinner_seating.py  14_reindeer_races.py  16_aunt_sue.py  17_eggnog.py  18_animation.py  19_medicine.py  20_presents.py  2_drunk_santa.py  2_wrapping_paper.py  3_hashing.py  5_interns.py  6_xmas_lights.py  7_bitwise.py  8_matchsticks.py  9_jetset_santa.py  Untitled.ipynb  day_8_test.input
advent2017/: common.py  day10.py  day11.py  day12_pipes_and_groups.py  day13_packet_scanners.py  day14_defragmenting_knot_hashes.py  day15.py  day16.py  day17.py  day18.py  day19_series_of_tubes.py  day1_inverse_captcha.py  day20_particles.py  day21_fractal_art.py  day22_virus_bursts.py  day2_corrupted_checksum.py  day3_spiral_memory.py  day4_passwords.py  day5_jumps.py  day6_totally_not_mancala.py  day7_recursive_programs.py  day8_registers.py  day9_char_stream.py  test.txt
advent2018/: common.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  pyproject.toml
twentysixteen/: README.md  __init__.py  common.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
twentysixteen/tests/: test_day1.py  test_day12.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day2.py  test_day4.py  test_day5.py  test_day7.py  test_day8.py  test_day9.py
