[tool.poetry]
name = "advent2018"
version = "0.1.0"
description = ""
authors = ["Hassan Shamim <hassan.has.you@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
ipython = "^7.2"
pytest = "^4.0"
black = "^18.3-alpha.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
